# cidrs

./: Cargo.toml  LICENSE  README.md  justfile
.github/workflows/: ci.yml
benches/: aggregate.rs  routing_table.rs
examples/: cidr.rs  routing_table.rs
src/: aggregate.rs  cidr.rs  error.rs  lib.rs
src/routing_table/: mod.rs
src/routing_table/tree_bitmap/: bitmap.rs  mod.rs  nibble.rs  node.rs  tests.rs
tests/: aggregate.rs  cidr.rs  cidr_contains.rs  cidr_hosts.rs  cidr_mask_of.rs  cidr_overlaps.rs  routing_table.rs  routing_table_insert.rs  routing_table_len.rs  routing_table_list_matched.rs  routing_table_match_longest.rs
xtask/src/: main.rs
